Fix linter errors in html and css, rename images.

--- a/index.html
+++ b/index.html
@@ -20,29 +20,30 @@
             </ul>
         </nav>
     </header>
+    <div class="top-images">
+        <img src="images/Ellipse3.png" alt="ellipse" class="ellipse-3">
+        <img src="images/Rectangle4.png" alt="ellipse" class="rectangle-4">
+        <img src="images/Ellipse11.png" alt="ellipse" class="ellipse-11">
+    </div>
    
     <section class="greet-section"> 
-        <img src="images/Ellipse 3.png" alt="ellipse" class="ellipse-3">
-        <img src="images/Rectangle 4.png" alt="ellipse" class="rectangle-4">
-        <img src="images/Ellipse 11.png" alt="ellipse" class="ellipse=11">
+ 
         <h2>I’m Mariane Glad to see you!</h2>
-    </section>
-    <section class="info-section">
-        <p>I’m a software developer! I can help you build a product , 
+    
+        <p class="info-section">I’m a software developer! I can help you build a product , 
         feature or website Look through some of my work and experience! 
         If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-    </section>
-    <section>
+    
         <p class="connect">LET’S CONNECT</p>
     </section>
-    <section class="connect-links">
+    <div class="connect-links">
         <img src="images/Vectortweet.svg" alt="The twitter logo" class="twitter">
         <img src="images/Vectori.png" alt="Linked in logo" class="linkedin">
         <img src="images/Vectorn.png" alt="Linked in logo" class="linkedin">
         <img src="images/Vectorm.svg" alt="M logo" class="mlogo">
         <img src="images/Vectorgit.svg" alt="Github logo" class="github">
         <img src="images/Vectorpeace.svg" alt="Peace Sign" class="peace-sign">
-    </section>
+    </div>
 </div>
 </body>
 
