Fix linter errors in index.html

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </section>
     <div class="social">
         <ul>
-            <li><a href="#"><img src="images/Vectortweet.svg"></a></li>
-            <li><a href="#"><img src="images/Linkedin.svg"></a></li>
-            <li><a href="#"><img src="images/Vectorm.svg"></a></li>
-            <li><a href="#"><img src="images/Vectorgit.svg"></a></li>
-            <li><a href="#"><img src="images/Vectorpeace.svg"></a></li>
+            <li><a href="#"><img src="images/Vectortweet.svg" alt="social media image"></a></li>
+            <li><a href="#"><img src="images/Linkedin.svg" alt="social media image"></a></li>
+            <li><a href="#"><img src="images/Vectorm.svg" alt="social media image"></a></li>
+            <li><a href="#"><img src="images/Vectorgit.svg" alt="social media image"></a></li>
+            <li><a href="#"><img src="images/Vectorpeace.svg" alt="social media image"></a></li>
         </ul>>
     </div>
 </div>
