Nest projects in ul tag with each work becoming a li.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             </ul>
         </div>
         <!--PROJECTS SECTION BEGIN HERE -->
-        <section class="project-1">
+        <section class="works-wrapper">
+            <ul class="list-wrapper">
+                <li class="project-1">
             <img class="projectpic" src="images/project1.svg" alt="project snapshot">
             <h2>Tonic</h2>
             <div class="canopy-flex">
@@ -66,11 +68,9 @@
             <div class="lb">
                 <button class="large-button" type="button">See Project</button>
             </div>
-
-        </section>
-         
+        </li>
         <!--PROJECT 2-->
-        <section class="project-1">
+        <li class="project-1">
             <img class="projectpic" src="images/portfolio2.svg" alt="project snapshot">
             <h2 class>Multi-Post
                 Stories</h2>
@@ -81,7 +81,6 @@
                     <li class="year">2015</li>
                 </ul>
             </div>
-
             <p class="primary-read">A daily selection of privately personalized reads;
                 no accounts or sign-ups required.</p>
             <div>
@@ -93,11 +92,9 @@
             <div class="lb">
                 <button class="large-button" type="button">See Project</button>
             </div>
-
-        </section>
-
+        </li>
         <!--PROJECT 3-->
-        <section class="project-1">
+        <li class="project-1">
             <img class="projectpic" src="images/project3.png" alt="project snapshot">
             <h2>Tonic</h2>
             <div class="canopy-flex">
@@ -119,11 +116,9 @@
             <div class="lb">
                 <button class="large-button" type="button">See Project</button>
             </div>
-
-        </section>
-
+        </li>
         <!--PROJECT 4-->
-        <section class="project-1">
+        <li class="project-1">
             <img class="projectpic" src="images/project4.svg" alt="project snapshot">
             <h2 class>Multi-Post
                 Stories</h2>
@@ -146,9 +141,9 @@
             <div class="lb">
                 <button class="large-button" type="button">See Project</button>
             </div>
-
+        </ul>
         </section>
-
+    </li>
         <!--PROJECT SECTION ENDS HERE-->
         <section class="about-me">
             <h1>About Myself</h1>
