Edit fonts and alignment on about me section

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <ul class="cat-wrapper">
                     <li>
                         <p>Langguages <img src="images/Disabled.svg" alt="arrow"></p>
-                        
+
                         <ul class="lang-container">
                             <li><img src="images/js.svg" alt="javascript">
                                 <h5 class="title-text">JavaScript</h5>
@@ -181,12 +181,11 @@
                             </li>
                         </ul>
                     </li>
-
-                    <li>Frameworks
-                        <img src="images/Union.svg" alt="arrow">
-                    <li>
-                        Skills
-                        <img src="images/Union.svg" alt="arrow">
+                    <li class="seperator">
+                        <p>Frameworks <img src="images/Union.svg" alt="arrow"></p>
+                    </li>
+                    <li class="seperator">
+                        <p>Skills<img src="images/Union.svg" alt="arrow"></p>
                     </li>
                 </ul>
             </section>
