Added HTML layout for contact form.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="flex-container">
         <section class="greet-section">
 
-            <h1>I’m Mariane Glad to see you!</h1>
+            <h1>I’m Rhyine Glad to see you!</h1>
 
             <p class="info-section">I’m a software developer! I can help you build a product ,
                 feature or website Look through some of my work and experience!
@@ -189,6 +189,26 @@
                 </ul>
             </section>
         </section>
+        <!--Form Begins Here-->
+        <form action="#" method="post">
+            <h1>Contact me</h1>
+            <p>If you have an application you are interested in developing, 
+                a feature that you need built or a project that needs coding. 
+                I’d love to help with it </p>
+                <ul>
+                    <li>
+                        <input type="text" class="input-box" name="user_name" value="Yeremias">
+                    </li>
+                    <li>
+                        <input type="email" class="input-box" name="user_email" value="natajayanj14@gmail.com">
+                    </li>
+                    <li>
+                    <textarea placeholder="Write your message here" name="user_message">
+
+                    </textarea>
+                    </li>
+                </ul>
+        </form>
     </main>
 </body>
 
