--- a/index.html
+++ b/index.html
@@ -190,23 +190,24 @@
             </section>
         </section>
         <!--Form Begins Here-->
-        <form action="#" method="post">
+        <form id="contact-me" action="#" method="post">
             <h1>Contact me</h1>
             <p>If you have an application you are interested in developing, 
                 a feature that you need built or a project that needs coding. 
                 I’d love to help with it </p>
                 <ul>
                     <li>
-                        <input type="text" class="input-box" name="user_name" value="Yeremias">
+                        <input type="text" class="input-box" name="user_name" placeholder="Enter your name here" value="Yeremias" required maxlength="30">
                     </li>
                     <li>
-                        <input type="email" class="input-box" name="user_email" value="natajayanj14@gmail.com">
+                        <input type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here" value="natajayanj14@gmail.com" required>
                     </li>
                     <li>
-                    <textarea placeholder="Write your message here" name="user_message">
-
-                    </textarea>
+                        <textarea class="input-box input-box-area" placeholder="Write your message here" name="user_message" required maxlength="500"></textarea>
                     </li>
+                    <li>
+                        <button class="large-button white-button" type="submit">Get It Touch</button>
+                    </li>                    
                 </ul>
         </form>
     </main>
