--- a/index.html
+++ b/index.html
@@ -21,28 +21,27 @@
     </header>
     <main class="flex-container">
         <section class="greet-section">
-
-            <h1>I’m Rhyine Glad to see you!</h1>
-
+            <h1 class="main-header">I’m Rhyine <br> Glad to see you!</h1>
             <p class="info-section">I’m a software developer! I can help you build a product ,
-                feature or website Look through some of my work and experience!
-                If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-        </section>
-        <div class="social">
-            <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectortweet.svg"
-                            alt="social media image"></a></li>
-                <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Linkedin.svg"
-                            alt="social media image"></a></li>
-                <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorm.svg"
-                            alt="social media image"></a></li>
-                <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorgit.svg"
-                            alt="social media image"></a></li>
-                <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorpeace.svg"
-                            alt="social media image"></a></li>
-            </ul>
-        </div>
+                feature or website Look through <br> some of my work and experience!
+                If you like what you see and have a project you need <br> coded, don’t hestiate to contact me.</p>
+                <div class="social">
+                    <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectortweet.svg"
+                                    alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Linkedin.svg"
+                                    alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorm.svg"
+                                    alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorgit.svg"
+                                    alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorpeace.svg"
+                                    alt="social media image"></a></li>
+                    </ul>
+                </div>
+            </section>
+     
         <!--PROJECTS SECTION BEGIN HERE -->
         <section class="works-wrapper">
             <ul class="list-wrapper">
