Add media query to first portfolio project so it is responsive with desktop

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <nav class="navbar">
             <ul>
                 <li class="nav-logo"><a href="#">My Logo</a></li>
+                <li class="menu-options"><a href="#portfolio">Portfolio</a></li>
+                <li class="menu-options"><a href="#about">About</a></li>
+                <li class="menu-options"><a href="#contact">Contact</a></li>
                 <li><img src="images/Menu.svg" alt="menu image" class="menu-image"></li>
             </ul>
         </nav>
@@ -25,118 +28,129 @@
             <p class="info-section">I’m a software developer! I can help you build a product ,
                 feature or website Look through <br> some of my work and experience!
                 If you like what you see and have a project you need <br> coded, don’t hestiate to contact me.</p>
-                <div class="social">
-                    <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
-                    <ul>
-                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectortweet.svg"
-                                    alt="social media image"></a></li>
-                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Linkedin.svg"
-                                    alt="social media image"></a></li>
-                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorm.svg"
-                                    alt="social media image"></a></li>
-                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorgit.svg"
-                                    alt="social media image"></a></li>
-                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorpeace.svg"
-                                    alt="social media image"></a></li>
-                    </ul>
-                </div>
-            </section>
-     
+            <div class="social">
+                <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
+                                src="images/Vectortweet.svg" alt="social media image"></a></li>
+                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Linkedin.svg"
+                                alt="social media image"></a></li>
+                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorm.svg"
+                                alt="social media image"></a></li>
+                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorgit.svg"
+                                alt="social media image"></a></li>
+                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
+                                src="images/Vectorpeace.svg" alt="social media image"></a></li>
+                </ul>
+            </div>
+        </section>
+
         <!--PROJECTS SECTION BEGIN HERE -->
-        <section class="works-wrapper">
+        <section class="works-wrapper" id="portfolio">
             <ul class="list-wrapper">
                 <li class="project-1">
                     <img class="projectpic" src="images/project1.svg" alt="project snapshot">
-                    <h2>Tonic</h2>
-                    <div class="canopy-flex">
-                        <ul>
-                            <li class="canopy">CANOPY</li>
-                            <li class="back-end">• Back End Dev •</li>
-                            <li class="year">2015</li>
+                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                    <div class="info-wrapper">
+                        <div class="canopy-flex">
+                            <h2>Tonic</h2>
+                            <ul>
+                                <li class="canopy">CANOPY</li>
+                                <li class="back-end">• Back End Dev •</li>
+                                <li class="year">2015</li>
+                            </ul>
+                        </div>
+                        <p class="primary-read">A daily selection of privately personalized reads;
+                            no accounts <br> or sign-ups required.</p>
+                        <ul class="small-button-wrapper">
+                            <li class="small-button">html</li>
+                            <li class="small-button">css</li>
+                            <li class="small-button">javaScript</li>
                         </ul>
-                    </div>
-                    <p class="primary-read">A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.</p>
-                    <ul class="small-button-wrapper">
-                        <li class="small-button">html</li>
-                        <li class="small-button">css</li>
-                        <li class="small-button">javaScript</li>
-                    </ul>
-                    <div class="lb">
-                        <button class="large-button" type="button">See Project</button>
+                        <div class="lb">
+                            <button class="large-button" type="button">See Project</button>
+                        </div>
                     </div>
                 </li>
                 <!--PROJECT 2-->
                 <li class="project-1">
-                    <img class="projectpic" src="images/portfolio2.svg" alt="project snapshot">
-                    <h2 class>Multi-Post
-                        Stories</h2>
-                    <div class="canopy-flex">
-                        <ul>
-                            <li class="canopy">CANOPY</li>
-                            <li class="back-end">• Back End Dev •</li>
-                            <li class="year">2015</li>
+                    <img class="projectpic" src="images/project1.svg" alt="project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                    <div class="info-wrapper">
+                        <div class="canopy-flex">
+                            <h2>Multi-Post Stories</h2>
+                            <ul>
+                                <li class="canopy">CANOPY</li>
+                                <li class="back-end">• Back End Dev •</li>
+                                <li class="year">2015</li>
+                            </ul>
+                        </div>
+                        <p class="primary-read">A daily selection of privately personalized reads;
+                            no accounts <br> or sign-ups required.</p>
+                        <ul class="small-button-wrapper">
+                            <li class="small-button">html</li>
+                            <li class="small-button">css</li>
+                            <li class="small-button">javaScript</li>
                         </ul>
-                    </div>
-                    <p class="primary-read">A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.</p>
-                    <ul class="small-button-wrapper">
-                        <li class="small-button">html</li>
-                        <li class="small-button">css</li>
-                        <li class="small-button">javaScript</li>
-                    </ul>
-                    <div class="lb">
-                        <button class="large-button" type="button">See Project</button>
+                        <div class="lb">
+                            <button class="large-button" type="button">See Project</button>
+                        </div>
                     </div>
                 </li>
                 <!--PROJECT 3-->
                 <li class="project-1">
-                    <img class="projectpic" src="images/project3.png" alt="project snapshot">
-                    <h2>Tonic</h2>
-                    <div class="canopy-flex">
-                        <ul>
-                            <li class="canopy">CANOPY</li>
-                            <li class="back-end">• Back End Dev •</li>
-                            <li class="year">2015</li>
+                    <img class="projectpic" src="images/project1.svg" alt="project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                    <div class="info-wrapper">
+                        <div class="canopy-flex">
+                            <h2>Tonic</h2>
+                            <ul>
+                                <li class="canopy">CANOPY</li>
+                                <li class="back-end">• Back End Dev •</li>
+                                <li class="year">2015</li>
+                            </ul>
+                        </div>
+                        <p class="primary-read">A daily selection of privately personalized reads;
+                            no accounts <br> or sign-ups required.</p>
+                        <ul class="small-button-wrapper">
+                            <li class="small-button">html</li>
+                            <li class="small-button">css</li>
+                            <li class="small-button">javaScript</li>
                         </ul>
-                    </div>
-                    <p class="primary-read">A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.</p>
-                    <ul class="small-button-wrapper">
-                        <li class="small-button">html</li>
-                        <li class="small-button">css</li>
-                        <li class="small-button">javaScript</li>
-                    </ul>
-                    <div class="lb">
-                        <button class="large-button" type="button">See Project</button>
+                        <div class="lb">
+                            <button class="large-button" type="button">See Project</button>
+                        </div>
                     </div>
                 </li>
                 <!--PROJECT 4-->
                 <li class="project-1">
-                    <img class="projectpic" src="images/project4.svg" alt="project snapshot">
-                    <h2 class>Multi-Post
-                        Stories</h2>
-                    <div class="canopy-flex">
-                        <ul>
-                            <li class="canopy">CANOPY</li>
-                            <li class="back-end">• Back End Dev •</li>
-                            <li class="year">2015</li>
+                    <img class="projectpic" src="images/project1.svg" alt="project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                    <div class="info-wrapper">
+                        <div class="canopy-flex">
+                            <h2>Tonic</h2>
+                            <ul>
+                                <li class="canopy">CANOPY</li>
+                                <li class="back-end">• Back End Dev •</li>
+                                <li class="year">2015</li>
+                            </ul>
+                        </div>
+                        <p class="primary-read">A daily selection of privately personalized reads;
+                            no accounts <br> or sign-ups required.</p>
+                        <ul class="small-button-wrapper">
+                            <li class="small-button">html</li>
+                            <li class="small-button">css</li>
+                            <li class="small-button">javaScript</li>
                         </ul>
+                        <div class="lb">
+                            <button class="large-button" type="button">See Project</button>
+                        </div>
                     </div>
-                    <p class="primary-read">A daily selection of privately personalized reads;
-                        no accounts or sign-ups required.</p>
-                    <ul class="small-button-wrapper">
-                        <li class="small-button">html</li>
-                        <li class="small-button">css</li>
-                        <li class="small-button">javaScript</li>
-                    </ul>
-                    <div class="lb">
-                        <button class="large-button" type="button">See Project</button>
-                    </div>
+                </li>
             </ul>
         </section>
         <!--PROJECT SECTION ENDS HERE-->
-        <section class="about-me">
+        <section class="about-me" id="about">
             <h1>About Myself</h1>
             <p class="info-section">Hello I’m a software developer!
                 I can help you build a product , feature or website Look through some of my work and experience! If you
@@ -188,28 +202,31 @@
                 </ul>
             </section>
         </section>
-        <section>
+        <section id="contact">
             <form id="contact-me" action="https://formspree.io/f/mnqlvaea" method="post">
                 <h1>Contact me</h1>
-                <p>If you have an application you are interested in developing, 
-                    a feature that you need built or a project that needs coding. 
+                <p>If you have an application you are interested in developing,
+                    a feature that you need built or a project that needs coding.
                     I’d love to help with it </p>
-                    <ul>
-                        <li>
-                            <input type="text" class="input-box" name="user_name" placeholder="Enter your name here" value="Yeremias" required maxlength="30">
-                        </li>
-                        <li>
-                            <input type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here" value="natajayanj14@gmail.com" required>
-                        </li>
-                        <li>
-                            <textarea class="input-box input-box-area" placeholder="Write your message here" name="user_message" required maxlength="500"></textarea>
-                        </li>
-                        <li>
-                            <button class="large-button white-button" type="submit">Get It Touch</button>
-                        </li>                    
-                    </ul>
+                <ul>
+                    <li>
+                        <input type="text" class="input-box" name="user_name" placeholder="Enter your name here"
+                            value="Yeremias" required maxlength="30">
+                    </li>
+                    <li>
+                        <input type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here"
+                            value="natajayanj14@gmail.com" required>
+                    </li>
+                    <li>
+                        <textarea class="input-box input-box-area" placeholder="Write your message here"
+                            name="user_message" required maxlength="500"></textarea>
+                    </li>
+                    <li>
+                        <button class="large-button white-button" type="submit">Get It Touch</button>
+                    </li>
+                </ul>
             </form>
-            </section>
+        </section>
     </main>
 </body>
 
