Add media query to contact page and about myself pages.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="info-section">I’m a software developer! I can help you build a product ,
                 feature or website Look through <br> some of my work and experience!
                 If you like what you see and have a project you need <br> coded, don’t hestiate to contact me.</p>
-            <div class="social">
+            <div class="sociala">
                 <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
@@ -52,7 +52,7 @@
                     <img class="projectpic" src="images/project1.svg" alt="project snapshot">
                     <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
                     <div class="info-wrapper">
-                        <div class="canopy-flex">
+                        <div class="canopy-flex ">
                             <h2>Tonic</h2>
                             <ul>
                                 <li class="canopy">CANOPY</li>
@@ -73,22 +73,29 @@
                     </div>
                 </li>
                 <!--PROJECT 2-->
-                <li class="project-1">
-                    <img class="projectpic" src="images/project1.svg" alt="project snapshot">
-                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                <li class="project-1 reverse">
+                    <img class="projectpic" src="images/portfolio2.svg" alt="project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic2.svg" alt="project snapshot">
                     <div class="info-wrapper">
                         <div class="canopy-flex">
                             <h2>Multi-Post Stories</h2>
-                            <ul>
-                                <li class="canopy">CANOPY</li>
-                                <li class="back-end">• Back End Dev •</li>
-                                <li class="year">2015</li>
+                            <ul class="desktop">
+                                <li class="canopy desktop">FACEBOOK</li>
+                                <li class="back-end desktop">• Full Stack Dev •</li>
+                                <li class="year desktop">2015</li>
+                                <li class="canopy mobile">CANOPY</li>
+                                <li class="back-end mobile">• Back End Dev •</li>
+                                <li class="year mobile">2015</li>
                             </ul>
                         </div>
-                        <p class="primary-read">A daily selection of privately personalized reads;
-                            no accounts <br> or sign-ups required.</p>
+                        <p class="primary-read desktop">Experimental content creation feature
+                            that allows users to<br> add to an existing story over the
+                            course of a day without spamming their friends.</p>
+                            <p class="primary-read mobile">A daily selection of privately personalized reads;
+                                no accounts <br> or sign-ups required.</p>
                         <ul class="small-button-wrapper">
                             <li class="small-button">html</li>
+                            <li class="small-button small-button2">Ruby on Rails</li>
                             <li class="small-button">css</li>
                             <li class="small-button">javaScript</li>
                         </ul>
@@ -99,21 +106,29 @@
                 </li>
                 <!--PROJECT 3-->
                 <li class="project-1">
-                    <img class="projectpic" src="images/project1.svg" alt="project snapshot">
-                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                    <img class="projectpic" src="images/project3.png" alt="project snapshot">
+                    <img class="desktoppic" src="images/dortfolio33.png" alt="project snapshot">
                     <div class="info-wrapper">
                         <div class="canopy-flex">
-                            <h2>Tonic</h2>
+                            <h2 class="mobile">Tonic</h2>
+                            <h2 class="desktop">Facebook 360</h2>
                             <ul>
-                                <li class="canopy">CANOPY</li>
-                                <li class="back-end">• Back End Dev •</li>
-                                <li class="year">2015</li>
+                                <li class="canopy desktop">FACEBOOK</li>
+                                <li class="back-end desktop">• Full Stack Dev •</li>
+                                <li class="year desktop">2015</li>
+                                <li class="canopy mobile">CANOPY</li>
+                                <li class="back-end mobile">• Back End Dev •</li>
+                                <li class="year mobile">2015</li>
                             </ul>
                         </div>
-                        <p class="primary-read">A daily selection of privately personalized reads;
-                            no accounts <br> or sign-ups required.</p>
-                        <ul class="small-button-wrapper">
+                        <p class="primary-read desktop">Exploring the future of media in Facebook's
+                            first Virtual Reality app;
+                            a place to discover and enjoy 360 photos and videos on Gear VR.</p>
+                            <p class="primary-read mobile">A daily selection of privately personalized reads;
+                                no accounts <br> or sign-ups required.</p>
+                            <ul class="small-button-wrapper">
                             <li class="small-button">html</li>
+                            <li class="small-button small-button2">Ruby on Rails</li>
                             <li class="small-button">css</li>
                             <li class="small-button">javaScript</li>
                         </ul>
@@ -123,22 +138,30 @@
                     </div>
                 </li>
                 <!--PROJECT 4-->
-                <li class="project-1">
-                    <img class="projectpic" src="images/project1.svg" alt="project snapshot">
-                    <img class="desktoppic" src="images/dortfoliopic1.svg" alt="project snapshot">
+                <li class="project-1 reverse">
+                    <img class="projectpic" src="images/project4.svg" alt="project snapshot">
+                    <img class="desktoppic" src="images/dortfoliopic3.svg" alt="project snapshot">
                     <div class="info-wrapper">
                         <div class="canopy-flex">
-                            <h2>Tonic</h2>
+                            <h2 class="mobile">Multi-Post Stories</h2>
+                            <h2 class="desktop">Uber Navigation</h2>
                             <ul>
-                                <li class="canopy">CANOPY</li>
-                                <li class="back-end">• Back End Dev •</li>
-                                <li class="year">2015</li>
+                                <li class="canopy desktop">FACEBOOK</li>
+                                <li class="back-end desktop">• Full Stack Dev •</li>
+                                <li class="year desktop">2015</li>
+                                <li class="canopy mobile">CANOPY</li>
+                                <li class="back-end mobile">• Back End Dev •</li>
+                                <li class="year mobile">2015</li>
                             </ul>
                         </div>
-                        <p class="primary-read">A daily selection of privately personalized reads;
-                            no accounts <br> or sign-ups required.</p>
-                        <ul class="small-button-wrapper">
+                        <p class="primary-read desktop">Experimental content creation feature
+                            that allows users to<br> add to an existing story over the
+                            course of a day without spamming their friends.</p>
+                            <p class="primary-read mobile">A daily selection of privately personalized reads;
+                                no accounts <br> or sign-ups required.</p>
+                            <ul class="small-button-wrapper">
                             <li class="small-button">html</li>
+                            <li class="small-button small-button2">Ruby on Rails</li>
                             <li class="small-button">css</li>
                             <li class="small-button">javaScript</li>
                         </ul>
@@ -146,34 +169,38 @@
                             <button class="large-button" type="button">See Project</button>
                         </div>
                     </div>
-                </li>
+                </li>    
             </ul>
         </section>
         <!--PROJECT SECTION ENDS HERE-->
         <section class="about-me" id="about">
-            <h1>About Myself</h1>
-            <p class="info-section">Hello I’m a software developer!
-                I can help you build a product , feature or website Look through some of my work and experience! If you
-                like what you see and have a project you need coded,
-                don’t hestiate to contact me.</p>
-            <div class="social">
-                <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                src="images/Vectortweet.svg" alt="social media image"></a></li>
-                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Linkedin.svg"
-                                alt="social media image"></a></li>
-                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorm.svg"
-                                alt="social media image"></a></li>
-                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img src="images/Vectorgit.svg"
-                                alt="social media image"></a></li>
-                    <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
-                                src="images/Vectorpeace.svg" alt="social media image"></a></li>
-                </ul>
+            <div class="about-wrapper">
+                <h1>About Myself</h1>
+                <p class="info-section">Hello I’m a software developer!
+                    I can help you build a product , feature or website Look through some of my work and experience! If
+                    you
+                    like what you see and have a project you need coded,
+                    don’t hestiate to contact me.</p>
+                <div class="socialb">
+                    <h6 class="connect"><a href="#">LET’S CONNECT</a></h6>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
+                                    src="images/Vectortweet.svg" alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
+                                    src="images/Linkedin.svg" alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
+                                    src="images/Vectorm.svg" alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
+                                    src="images/Vectorgit.svg" alt="social media image"></a></li>
+                        <li><a href="https://www.linkedin.com/in/rhyine-stewart-a8373913a/"><img
+                                    src="images/Vectorpeace.svg" alt="social media image"></a></li>
+                    </ul>
+                    <div class="resume">
+                        <button class="large-button" type="button">Get my resume</button>
+                    </div>
+                </div>
             </div>
-            <div class="resume">
-                <button class="large-button" type="button">Get my resume</button>
-            </div>
+
             <section class="qualification">
                 <ul class="cat-wrapper">
                     <li>
@@ -221,7 +248,7 @@
                         <textarea class="input-box input-box-area" placeholder="Write your message here"
                             name="user_message" required maxlength="500"></textarea>
                     </li>
-                    <li>
+                    <li id="button-wrapper">
                         <button class="large-button white-button" type="submit">Get It Touch</button>
                     </li>
                 </ul>
