Add screen 993 in media query.

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                             <h2 class="mobile">Multi-Post Stories</h2>
                             <h2 class="desktop">Uber Navigation</h2>
                             <ul>
-                                <li class="canopy desktop">FACEBOOK</li>
-                                <li class="back-end desktop">• Full Stack Dev •</li>
-                                <li class="year desktop">2015</li>
+                                <li class="canopy desktop">UBER</li>
+                                <li class="back-end desktop">• Lead Developer•</li>
+                                <li class="year desktop">2018</li>
                                 <li class="canopy mobile">CANOPY</li>
                                 <li class="back-end mobile">• Back End Dev •</li>
                                 <li class="year mobile">2015</li>
@@ -238,11 +238,11 @@
                 <ul>
                     <li>
                         <input type="text" class="input-box" name="user_name" placeholder="Enter your name here"
-                            value="Yeremias" required maxlength="30">
+                             required maxlength="30">
                     </li>
                     <li>
                         <input type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here"
-                            value="natajayanj14@gmail.com" required>
+                             required>
                     </li>
                     <li>
                         <textarea class="input-box input-box-area" placeholder="Write your message here"
